# alchemist

./: Cargo.toml
.github/workflows/: rust.yml
.sqlx/: query-36c85b6447bd16fcca68752f1f7f9d05e9a32dd32a4fd30804327ce73905201c.json  query-a26062ac53b4aba4587b326f554a55ca914c1caaeebe27eb54282c913d26ac4b.json
migrations/: 20250322004318_create_users_table.sql  20250322005157_create_posts_table.sql
src/: main.rs
src/handlers/: posts.rs  users.rs
src/models/: create_post.rs  create_user.rs  mod.rs  post.rs  update_post.rs  user.rs
