[package]
name = "alchemist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
